--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>eschool</artifactId>
 	<version>1.0.0</version>
 	<name>eschool</name>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<description>ESchool Api</description>
 	<properties>
 		<java.version>1.8</java.version>
