--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -7,6 +7,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 
 # Swagger settings
 springdoc.swagger-ui.operationsSorter=method
