--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,9 @@ server.compression.min-response-size=4096
 
 # Mime types that should be compressed
 server.compression.mime-types==text/xml, text/plain,  application/json, application/zip, application/xml
+
+# Server errors
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=on_param
+server.error.include-exception=false
