--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,7 +4,7 @@ spring.datasource.password=2485782
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 
 # Swagger settings
